# olden

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  TODO.md  pyproject.toml
data/: demo_army.yaml  demo_battle.yaml  demo_combat_log.yaml  demo_movement_log.yaml  genetic_battle.yaml  genetic_best_battle.yaml  genetic_best_combat_log.yaml
data/army/: necropolis.yaml  temple.yaml
data/object/: abandoned_mansion.yaml  abnormal_structure.yaml  alvar_outpost.yaml  ancient_crypt.yaml  black_tower.yaml  boreal_call.yaml  carrion_pile.yaml  circle_of_life.yaml  colosseum.yaml  cursed_old_house.yaml  dragon_utopia.yaml  iridicent_abbey.yaml  legions_memorial.yaml  meareas_altar.yaml  overgrown_vori_ruins.yaml  petrified_memorial.yaml  point_of_balance.yaml  prismatic_nest.yaml  raiders_camp.yaml  research_laboratory.yaml  ritual_pyre.yaml  tomb_of_vigilance.yaml  troglodyte_throne.yaml  twilight_bloom.yaml  uncanny_rite.yaml
doc/: backlog.md  combat_system_reference.md  decisions.md  development.md  glossary.md  hex_math.md  ideas.md  requirements.md  roadmap.md  simulation_setup.md  user_stories.md
doc/wiki/: README.md  hero_basics.md  map_objects.md
findings/: stack_split_tactic.md
sample/: __init__.py  demo_army_matchup.py  demo_army_summary.py  demo_battle_until_defeat.py  demo_breakpoint_scan.py  demo_movement_simulation.py  demo_object_defense_rating.py  demo_one_round_battle.py  demo_simulation.py  genetic_strategy_discovery.py
scripts/: __init__.py  rename-template.sh  view_server.py
src/mcp_stdio_python_template/: __init__.py  __main__.py  cli.py  config.py  server.py
src/olden/: config.py  exceptions.py
src/olden/battlefield_view/: __init__.py  app.py  layout.py  model.py  replay_app.css  replay_app.py  static.py  svg.py  unit_images.py
src/olden/combat/: __init__.py  action_opportunities.py  action_selection.py  army.py  army_setup.py  attack.py  battle.py  battle_setup.py  battlefield.py  combat_actions.py  combat_log.py  combat_replay.py  combat_simulation.py  coordinates.py  deployment.py  engagement.py  heroes.py  movement.py  movement_simulation.py  obstacles.py  occupancy.py  range.py  sides.py  targeting.py  turn_order.py  units.py
src/olden/hero_data/: NOTICE.md  __init__.py  catalog.py  heroes.yaml  packaged.py
src/olden/strategy_discovery/: __init__.py  stack_split.py
src/olden/unit_data/: LICENSE-CC-BY-SA-4.0.md  NOTICE.md  __init__.py  catalog.py  packaged.py  units.yaml
tests/: test_cli.py  test_config.py  test_mcp_tools.py  test_stdio_integration.py
tests/battlefield_view/: test_app.py  test_layout.py  test_model.py  test_replay_app.py  test_static.py  test_svg.py  test_unit_images.py
tests/combat/: test_army.py  test_army_setup.py  test_attack.py  test_battle_setup.py  test_battlefield.py  test_combat_actions.py  test_combat_log.py  test_combat_replay.py  test_combat_simulation.py  test_movement.py  test_movement_simulation.py  test_occupancy.py  test_range.py  test_targeting.py  test_turn_order.py  test_units.py
tests/hero_data/: __init__.py  test_catalog.py
tests/sample/: test_demo_army_matchup.py  test_demo_army_summary.py  test_demo_battle_until_defeat.py  test_demo_breakpoint_scan.py  test_demo_movement_simulation.py  test_demo_object_defense_rating.py  test_demo_one_round_battle.py  test_demo_simulation.py  test_genetic_strategy_discovery.py
tests/scripts/: test_view_server.py
tests/strategy_discovery/: test_stack_split.py
tests/unit_data/: test_catalog.py
