[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olden"
version = "0.1.1"
description = "Olden combat simulator."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "CC0-1.0" }
keywords = ["olden"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "python-dotenv>=1,<2",
    "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
    "mypy>=2,<3",
    "pytest>=8,<9",
    "ruff>=0.15,<1",
    "types-PyYAML>=6,<7",
]
view = [
    "nicegui>=3.12,<4",
]

[project.scripts]
olden-combat-replay-view = "olden.battlefield_view.replay_app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"olden.battlefield_view" = ["*.css"]
"olden.unit_data" = ["*.yaml", "LICENSE-*.md", "NOTICE.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 128
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
files = ["src", "sample", "scripts", "tests"]
mypy_path = "src"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true
